11/21/2005  Ian Lewis   <IanLewis@member.fsf.org>

    * Fixed a number of bugs having to do with how and when the XML document
      is parsed.

11/09/2005  Ian Lewis   <IanLewis@member.fsf.org>

    * The open file dialog now defaults to the directory specified in
      the system parameter user.dir. This causes tho open file dialog to open
      to the C:\Documents and Settings\user directory instead of the My
      Documents directory in windows.

11/01/2005  Ian Lewis   <IanLewis@member.fsf.org>

    * XMLDocuments were marked as not synced with the document after they
      were parsed in some cases. This caused the document to serialize itself
      it some unnessary places and sometimes mark itself as dirty because of it.
    * Fixed a bug where the Log file stream was being closed by the
      ActivityLogDialog.
    * Added a dialog that shows validation errors (though this may not be
      working quite yet, I'm not sure I'm setting the parameters with Xerces
      correctly).
    * Fixed validation so that it returns correct error messages.

10/26/2005 Ian Lewis <IanLewis@member.fsf.org>

    * Fixed a bug in the caching process that caused fatal IOExceptions to be
      thrown.

10/25/2005 Ian Lewis <IanLewis@member.fsf.org>

    * Updated the about dialog to get it's messages in a locale specific way.
      Now the about dialog can be displayed in other languages.
    * Added support for caching external files to the disk in the user's
      settings directory. This should make load times faster for files with a
      lot of external files. jsXe now requires the commons xml-commons resolver
      jar file.

10/24/2005 Ian Lewis <IanLewis@member.fsf.org>

    * Updated how the splash screen gets updated on startup to make it
      more active.
    * Updated the activity log dialog to display the label as well as
      the close/ok button better. Fixed the loading and saving of the geometry.